Implemented styling using Material

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,7 @@
-<h1 style="text-align: center;" class="Title">Take a quiz!</h1>
+
+<body>
+
+<h1 style="text-align: center;" class="Title">COME ON - LET'S TAKE A QUIZ!</h1>
 
 
 <div *ngFor="let q of quiz">
@@ -10,3 +13,4 @@
     </mat-card-actions>
   </mat-card>
 </div>
+</body>
