--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,4 +1,4 @@
-<mat-card class="Quiz-Options" style="overflow:hidden;">
+<mat-card class="Quiz-Options" style="text-align: center; overflow:hidden;">
 <div *ngIf="quiz && !questions" class="spinner-grow text-primary"></div>
 
 <div class="quiz" *ngIf="questions">
@@ -9,14 +9,12 @@
       (onChoiceMade)="updateChoice($event)">
     </app-question-form>
 
-    <mat-card-actions style="float:right;">
+    <mat-card-actions style="text-align: center;margin-top: 20px;">
 
-        <a mat-raised-button color="primary" class="btn1" style="align-items: right;" (click)="nextOrViewResults()"
+        <a mat-raised-button color="primary" class="btn1" (click)="nextOrViewResults()"
           [disabled]="!answers.values[currentQuestionIndex]">{{currentQuestionIndex === questions.length - 1 ? 'View results' : 'Next'}}</a>
       </mat-card-actions>
     </div>
     <app-results *ngIf="showResults" [answers]="answers"></app-results>
   </div>
 </mat-card>
-
-  
