--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,14 +1,9 @@
 mat-card {
-  width: 75%;
-  margin: auto;
-  text-align: center;
+  width: 50%;
+  margin: 50px auto;
+  padding: 25px;
 }
 
-a {
-  text-decoration: none;
-  color: #424242;
-}
-
-button:hover {
-  background-color: pink;
+body {
+  margin-top: 50px;
 }
